Fix resume display on mobile

--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ hr {
 }
 .window-body > img {
   max-width: 100%;
-  height: 100%;
+  height: auto;
 }
 .open-apps {
   display: flex;
